--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,3 +58,5 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Style/ExpandPathArguments:
+  Enabled: false
